Improve HSFS notebooks

--- a/notebooks/featurestore/hsfs/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/feature_engineering.ipynb
@@ -56,7 +56,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>4</td><td>application_1604957327609_0008</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1604957327609_0008/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1604957327609_0008_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>7</td><td>application_1605286520909_0013</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1605286520909_0013/\">Link</a></td><td><a target=\"_blank\" href=\"http://ip-10-0-0-114.us-west-2.compute.internal:8042/node/containerlogs/container_e02_1605286520909_0013_01_000001/demo_fs_meb10179__meb10179\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -102,25 +102,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from hops import hdfs\n",
     "from pyspark.sql import functions as F\n",
     "\n",
     "stores_csv = spark.read\\\n",
     "             .option(\"inferSchema\", \"true\")\\\n",
     "             .option(\"header\", \"true\")\\\n",
     "             .format(\"csv\")\\\n",
-    "             .load(\"hdfs:///Projects/demo_fs_meb10000/Jupyter/hsfs/archive/stores data-set.csv\")\n",
+    "             .load(\"hdfs:///Projects/{}/Jupyter/hsfs/archive/stores data-set.csv\".format(hdfs.project_name()))\n",
     "\n",
     "exogenous_csv = spark.read\\\n",
     "             .option(\"inferSchema\", \"true\")\\\n",
     "             .option(\"header\", \"true\")\\\n",
     "             .format(\"csv\")\\\n",
-    "             .load(\"hdfs:///Projects/demo_fs_meb10000/Jupyter/hsfs/archive/Features data set.csv\")\n",
+    "             .load(\"hdfs:///Projects/{}/Jupyter/hsfs/archive/Features data set.csv\".format(hdfs.project_name()))\n",
     "\n",
     "sales_csv = spark.read\\\n",
     "             .option(\"inferSchema\", \"true\")\\\n",
     "             .option(\"header\", \"true\")\\\n",
     "             .format(\"csv\")\\\n",
-    "             .load(\"hdfs:///Projects/demo_fs_meb10000/Jupyter/hsfs/archive/sales data-set.csv\")"
+    "             .load(\"hdfs:///Projects/{}/Jupyter/hsfs/archive/sales data-set.csv\".format(hdfs.project_name()))"
    ]
   },
   {
@@ -147,35 +148,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root\n",
-      " |-- store: integer (nullable = true)\n",
-      " |-- date: string (nullable = true)\n",
-      " |-- temperature: double (nullable = true)\n",
-      " |-- fuel_price: double (nullable = true)\n",
-      " |-- markdown1: string (nullable = true)\n",
-      " |-- markdown2: string (nullable = true)\n",
-      " |-- markdown3: string (nullable = true)\n",
-      " |-- markdown4: string (nullable = true)\n",
-      " |-- markdown5: string (nullable = true)\n",
-      " |-- cpi: string (nullable = true)\n",
-      " |-- unemployment: string (nullable = true)\n",
-      " |-- is_holiday: boolean (nullable = true)"
-     ]
-    }
-   ],
-   "source": [
-    "exogenous_csv.printSchema()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -186,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,14 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f0a46b0a290>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7fa6e6d255d0>"
      ]
     }
    ],
@@ -231,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,14 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f0a2ea0d290>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7ff4e276ac50>"
      ]
     }
    ],
@@ -314,14 +286,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f0a46b01b10>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7ff4e1fddf90>"
      ]
     }
    ],
@@ -348,14 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f0a46bc7dd0>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7ff4e1fe1d50>"
      ]
     }
    ],
@@ -382,14 +354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f0a471e6890>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7ff4e1fad150>"
      ]
     }
    ],
@@ -416,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,14 +439,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f0a46bc73d0>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7ff4e1fe1450>"
      ]
     }
    ],
@@ -533,21 +505,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "sales_fg = fs.get_feature_group('sales_fg', 1)\n",
-    "sales_fg.add_tag('prod')"
+    "sales_fg.add_tag('Prod')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sales_fg.add_tag('country', value=\"US\")"
+    "sales_fg.add_tag('Country', value=\"US\")"
    ]
   },
   {
@@ -560,14 +532,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]"
+      "[{'Prod': ''}, {'Country': 'US'}]"
      ]
     }
    ],
@@ -587,14 +559,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f0a46d7a490>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7ff4e1fe13d0>"
      ]
     }
    ],
@@ -610,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
