--- a/notebooks/featurestore/hsfs/time_travel/time_travel_python.ipynb
+++ b/notebooks/featurestore/hsfs/time_travel/time_travel_python.ipynb
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "economy_fg### Create HUDI time travel enabled feature group and Bulk Insert Sample Dataset\n",
+    "### Create HUDI time travel enabled feature group and Bulk Insert Sample Dataset\n",
     "\n",
     "For this demo we will use small sample of the Agarwal Generator that is a widely used dataset. It contains the hypothetical data of people applying for a loan. `Rakesh Agrawal, Tomasz Imielinksi, and Arun Swami, \"Database Mining: A Performance Perspective\", IEEE Transactions on Knowledge and Data Engineering, 5(6), December 1993. <br/><br/>`\n",
     "\n",
