--- a/notebooks/ml/End_To_End_Pipeline/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
+++ b/notebooks/ml/End_To_End_Pipeline/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
@@ -494,7 +494,7 @@
    "source": [
     "while serving.get_status(MODEL_NAME) != \"Running\":\n",
     "    time.sleep(5) # Let the serving startup correctly\n",
-    "time.sleep(5)"
+    "time.sleep(15)"
    ]
   },
   {
@@ -654,17 +654,17 @@
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 2
+    "version": 3
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
