--- a/notebooks/ml/End_To_End_Pipeline/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
+++ b/notebooks/ml/End_To_End_Pipeline/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
@@ -654,17 +654,17 @@
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "python",
+   "language": "",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 3
+    "version": 2
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "python3"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
