--- a/notebooks/featurestore/aws/redshift/churn/data_ingestion.ipynb
+++ b/notebooks/featurestore/aws/redshift/churn/data_ingestion.ipynb
@@ -57,6 +57,7 @@
     "connector_redshift = fs.get_storage_connector(\"connector-1\", \"REDSHIFT\")\n",
     "options = connector_redshift.spark_options()\n",
     "\n",
+    "#The table created in Get started with Redshift and the Feature Store\n",
     "telcom = spark.read.format(\"jdbc\").options(**options).load()\n",
     "telcom.show(10)"
    ]
