--- a/notebooks/featurestore/hsfs/time_travel/time_travel_python.ipynb
+++ b/notebooks/featurestore/hsfs/time_travel/time_travel_python.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "Hudi is integrated in the Hopsworks Feature Store for doing incremental feature computation and for point-in-time correctness and backfilling of feature data.\n",
     "\n",
-    "![Incremental Feature Engineering](./../images/featurestore_incremental_pull.png \"Incremetal Feature Engineering\")"
+    "![Incremental Feature Engineering](../../images/featurestore_incremental_pull.png \"Incremetal Feature Engineering\")"
    ]
   },
   {
@@ -59,7 +59,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>20</td><td>application_1608214425464_0013</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1608214425464_0013/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e03_1608214425464_0013_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>1</td><td>application_1609179262945_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1609179262945_0003/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1609179262945_0003_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -73,7 +73,7 @@
      "output_type": "stream",
      "text": [
       "SparkSession available as 'spark'.\n",
-      "<pyspark.sql.session.SparkSession object at 0x7fa41e472b10>"
+      "<pyspark.sql.session.SparkSession object at 0x7f70724b0ed0>"
      ]
     }
    ],
@@ -388,7 +388,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fa42e1d0590>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f7080092c90>"
      ]
     }
    ],
@@ -405,7 +405,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fa42e1d0690>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f7080092d90>"
      ]
     }
    ],
@@ -422,7 +422,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fa42e1d0550>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f7080092810>"
      ]
     }
    ],
@@ -450,7 +450,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1608233042000, {'committedOn': '20201217192402', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
+      "(1609243242000, {'committedOn': '20201229120042', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
      ]
     }
    ],
@@ -475,14 +475,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+--------+---+------+---------+-----+---------+----+\n",
-      "|commission|  hvalue| id|hyears|   salary|  car|     loan|year|\n",
-      "+----------+--------+---+------+---------+-----+---------+----+\n",
-      "|       0.0|235000.0|  1|    30|110499.73|car15| 354724.2|2020|\n",
-      "|       0.0|135000.0|  2|     2|140893.77|car20|395015.34|2020|\n",
-      "|  52593.63|185000.0|  4|    30|  20000.0| car9| 99629.62|2020|\n",
-      "|       0.0|145000.0|  3|    22|119159.65| car1|122025.08|2020|\n",
-      "+----------+--------+---+------+---------+-----+---------+----+"
+      "+---------+--------+------+----------+---------+-----+---+----+\n",
+      "|   salary|  hvalue|hyears|commission|     loan|  car| id|year|\n",
+      "+---------+--------+------+----------+---------+-----+---+----+\n",
+      "|140893.77|135000.0|     2|       0.0|395015.34|car20|  2|2020|\n",
+      "|110499.73|235000.0|    30|       0.0| 354724.2|car15|  1|2020|\n",
+      "|  20000.0|185000.0|    30|  52593.63| 99629.62| car9|  4|2020|\n",
+      "|119159.65|145000.0|    22|       0.0|122025.08| car1|  3|2020|\n",
+      "+---------+--------+------+----------+---------+-----+---+----+"
      ]
     }
    ],
@@ -499,14 +499,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------+---+---+--------+\n",
-      "|elevel| id|age| zipcode|\n",
-      "+------+---+---+--------+\n",
-      "|level0|  4| 56|zipcode2|\n",
-      "|level2|  3| 49|zipcode4|\n",
-      "|level4|  2| 44|zipcode8|\n",
-      "|level3|  1| 54|zipcode5|\n",
-      "+------+---+---+--------+"
+      "+---+---+------+--------+\n",
+      "|age| id|elevel| zipcode|\n",
+      "+---+---+------+--------+\n",
+      "| 56|  4|level0|zipcode2|\n",
+      "| 49|  3|level2|zipcode4|\n",
+      "| 44|  2|level4|zipcode8|\n",
+      "| 54|  1|level3|zipcode5|\n",
+      "+---+---+------+--------+"
      ]
     }
    ],
@@ -526,8 +526,8 @@
       "+---+------+----+\n",
       "| id| class|year|\n",
       "+---+------+----+\n",
-      "|  3|groupB|2020|\n",
       "|  4|groupB|2020|\n",
+      "|  3|groupB|2020|\n",
       "|  2|groupB|2020|\n",
       "|  1|groupB|2020|\n",
       "+---+------+----+"
@@ -689,14 +689,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+--------+---+------+---------+-----+---------+----+\n",
-      "|commission|  hvalue| id|hyears|   salary|  car|     loan|year|\n",
-      "+----------+--------+---+------+---------+-----+---------+----+\n",
-      "|       0.0|235000.0|  1|    30|110499.73|car15| 354724.2|2020|\n",
-      "|       0.0|135000.0|  2|     2|140893.77|car20|395015.34|2020|\n",
-      "|  52593.63|185000.0|  4|    30|  20000.0| car9| 99629.62|2020|\n",
-      "|       0.0|145000.0|  3|    22|119159.65| car1|122025.08|2020|\n",
-      "+----------+--------+---+------+---------+-----+---------+----+"
+      "+---------+--------+------+----------+---------+-----+---+----+\n",
+      "|   salary|  hvalue|hyears|commission|     loan|  car| id|year|\n",
+      "+---------+--------+------+----------+---------+-----+---+----+\n",
+      "|140893.77|135000.0|     2|       0.0|395015.34|car20|  2|2020|\n",
+      "|110499.73|235000.0|    30|       0.0| 354724.2|car15|  1|2020|\n",
+      "|  20000.0|185000.0|    30|  52593.63| 99629.62| car9|  4|2020|\n",
+      "|119159.65|145000.0|    22|       0.0|122025.08| car1|  3|2020|\n",
+      "+---------+--------+------+----------+---------+-----+---+----+"
      ]
     }
    ],
@@ -757,17 +757,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+--------+---+------+---------+-----+---------+----+\n",
-      "|commission|  hvalue| id|hyears|   salary|  car|     loan|year|\n",
-      "+----------+--------+---+------+---------+-----+---------+----+\n",
-      "|       0.0|205000.0|  1|    30|120499.73|car17| 564724.2|2020|\n",
-      "|       0.0|179000.0|  2|     2|160893.77|car10|455015.34|2020|\n",
-      "|       0.0|145000.0|  3|    22|119159.65| car1|122025.08|2020|\n",
-      "|  52593.63|185000.0|  4|    30|  20000.0| car9| 99629.62|2020|\n",
-      "|       0.0|135000.0|  5|     1| 93956.32|car15| 458679.8|2020|\n",
-      "|  52809.15|135000.0|  6|    19| 41365.43| car7| 216839.7|2020|\n",
-      "|       0.0|135000.0|  7|    23| 94805.61|car17|233216.06|2020|\n",
-      "+----------+--------+---+------+---------+-----+---------+----+"
+      "+---------+--------+------+----------+---------+-----+---+----+\n",
+      "|   salary|  hvalue|hyears|commission|     loan|  car| id|year|\n",
+      "+---------+--------+------+----------+---------+-----+---+----+\n",
+      "|120499.73|205000.0|    30|       0.0| 564724.2|car17|  1|2020|\n",
+      "| 93956.32|135000.0|     1|       0.0| 458679.8|car15|  5|2020|\n",
+      "| 41365.43|135000.0|    19|  52809.15| 216839.7| car7|  6|2020|\n",
+      "| 94805.61|135000.0|    23|       0.0|233216.06|car17|  7|2020|\n",
+      "|160893.77|179000.0|     2|       0.0|455015.34|car10|  2|2020|\n",
+      "|  20000.0|185000.0|    30|  52593.63| 99629.62| car9|  4|2020|\n",
+      "|119159.65|145000.0|    22|       0.0|122025.08| car1|  3|2020|\n",
+      "+---------+--------+------+----------+---------+-----+---+----+"
      ]
     }
    ],
@@ -784,17 +784,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------+---+---+--------+\n",
-      "|elevel| id|age| zipcode|\n",
-      "+------+---+---+--------+\n",
-      "|level1|  2| 44|zipcode8|\n",
-      "|level2|  6| 71|zipcode3|\n",
-      "|level2|  3| 49|zipcode4|\n",
-      "|level3|  1| 54|zipcode5|\n",
-      "|level0|  4| 56|zipcode2|\n",
-      "|level1|  5| 59|zipcode2|\n",
-      "|level1|  7| 32|zipcode2|\n",
-      "+------+---+---+--------+"
+      "+---+---+------+--------+\n",
+      "|age| id|elevel| zipcode|\n",
+      "+---+---+------+--------+\n",
+      "| 44|  2|level1|zipcode8|\n",
+      "| 71|  6|level2|zipcode3|\n",
+      "| 49|  3|level2|zipcode4|\n",
+      "| 54|  1|level3|zipcode5|\n",
+      "| 56|  4|level0|zipcode2|\n",
+      "| 59|  5|level1|zipcode2|\n",
+      "| 32|  7|level1|zipcode2|\n",
+      "+---+---+------+--------+"
      ]
     }
    ],
@@ -816,8 +816,8 @@
       "+---+------+----+\n",
       "|  1|groupA|2020|\n",
       "|  4|groupB|2020|\n",
-      "|  2|groupB|2020|\n",
       "|  3|groupB|2020|\n",
+      "|  2|groupB|2020|\n",
       "|  5|groupA|2020|\n",
       "|  6|groupA|2020|\n",
       "|  7|groupA|2020|\n",
@@ -845,8 +845,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1608233181000, {'committedOn': '20201217192621', 'rowsUpdated': 2, 'rowsInserted': 3, 'rowsDeleted': 0})\n",
-      "(1608233042000, {'committedOn': '20201217192402', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
+      "(1609243956000, {'committedOn': '20201229121236', 'rowsUpdated': 2, 'rowsInserted': 3, 'rowsDeleted': 0})\n",
+      "(1609243242000, {'committedOn': '20201229120042', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
      ]
     }
    ],
@@ -864,8 +864,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1608233252000, {'committedOn': '20201217192732', 'rowsUpdated': 1, 'rowsInserted': 3, 'rowsDeleted': 0})\n",
-      "(1608233105000, {'committedOn': '20201217192505', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
+      "(1609244046000, {'committedOn': '20201229121406', 'rowsUpdated': 1, 'rowsInserted': 3, 'rowsDeleted': 0})\n",
+      "(1609243319000, {'committedOn': '20201229120159', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
      ]
     }
    ],
@@ -883,8 +883,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1608233298000, {'committedOn': '20201217192818', 'rowsUpdated': 1, 'rowsInserted': 3, 'rowsDeleted': 0})\n",
-      "(1608233139000, {'committedOn': '20201217192539', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
+      "(1609244102000, {'committedOn': '20201229121502', 'rowsUpdated': 1, 'rowsInserted': 3, 'rowsDeleted': 0})\n",
+      "(1609243357000, {'committedOn': '20201229120237', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
      ]
     }
    ],
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
