fix text and add image

--- a/notebooks/featurestore/aws/redshift/Redshift_spark.ipynb
+++ b/notebooks/featurestore/aws/redshift/Redshift_spark.ipynb
@@ -49,10 +49,9 @@
     "\n",
     "<h3 style=\"color: #1EB382;font-weight: bold;\">Storage Connector</h3>\n",
     "\n",
-    "The first step to be able to ingest Redshift data in the feature store is to configure a storage connector. \n",
-    "Hopsworks storage connectors are meant as a centralized place to store and manage configurations to read and write to external system. \n",
+    "The first step to be able to ingest Redshift data into the feature store is to configure a storage connector.The Redshift connector requires you to specify the following properties. Most of them are available in the properties area of your cluster in the Redshift UI.\n",
     "\n",
-    "The Redshift connector requires you to specify the following properties. Most of them are available in the properties area of your cluster in the Redshift UI. \n",
+    "<img src=\"images/connector_ui.png\" alt=\"Redshift Connector UI\" style=\"margin: auto; height: 600px; width:550px;\"/>\n",
     "\n",
     "- Cluster identifier: The name of the cluster\n",
     "\n",
@@ -64,12 +63,13 @@
     "\n",
     "- Database port: The port of the cluster. Defaults to 5349\n",
     "\n",
+    "There are two options available for authenticating with the Redshift cluster. The first option is to configure a username and a password. The password is stored in the secret store and made available to all the members of the project.\n",
+    "The second option is to configure an IAM role. With IAM roles,  Jobs or notebooks launched on Hopsworks  do not need to explicitly authenticate with Redshift, as the HSFS library will transparently use the IAM role to acquire a temporary credential to authenticate the specified user. \n",
+    "In Hopsworks, there are two different ways to configure an IAM role: a per-cluster IAM role or a federated IAM role (role chaining). For the per-cluster IAM role, you select an instance profile for your Hopsworks cluster when launching it in hopsworks.ai, and all jobs or notebooks will be run with the selected IAM role.  For the federated IAM role, you create a head IAM role for the cluster that enables Hopsworks to assume a potentially different IAM role in each project. You can even restrict it so that only certain roles within a project (like a data owner) can assume a given role. \n",
     "\n",
-    "There are two options to authenticate with the Redshift cluster. The first option is to configure username and password. The password is stored in the secret store and made available to all the member of the project.\n",
+    "With regards to the database driver, the library to interact with Redshift *is not* included in Hopsworks - you need to upload the driver yourself. First, you need to download the library from  here. You then upload the driver files to the “Resources” dataset in your project. Then, you add the file to your notebook or job before launching it, as shown in the screenshots below.\n",
     "\n",
-    "Alternatively a IAM role can be configured. When configured the HSFS library will use the IAM role to acquire a temporary credential to authenticate the specified user.\n",
-    "\n",
-    "With regards to the database driver, the library to interact with Redshift *is not* part of the standard Hopsworks distribution and needs to be provided by the user. The library can be downloaded here: https://docs.aws.amazon.com/redshift/latest/mgmt/configure-jdbc-connection.html#download-jdbc-driver"
+    "The library can be downloaded here: https://docs.aws.amazon.com/redshift/latest/mgmt/configure-jdbc-connection.html#download-jdbc-driver"
    ]
   },
   {
@@ -128,15 +128,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 style=\"color: #1EB382;font-weight: bold;\">On-Demand Feature Group</h3>\n",
+    "<h3 style=\"color: #1EB382;font-weight: bold;\">External (On-Demand) Feature Group</h3>\n",
     "\n",
-    "To be able to read data from the Redshift table, an on-demand feature group needs to be defined.\n",
-    "In Hopsworks on-demand feature groups allow users to register features stored on external systems (Redshift, RDS, S3) with the Hopsworks feature store. \n",
+    "Hopsworks supports the creation of (a) cached feature groups and (b) external (on-demand) feature groups. For cached feature groups, the features are stored in Hopsworks feature store. For external feature groups, only metadata for features is stored in the feature store - not the actual feature data which is read from the external database/object-store. When the external feature group is accessed from a Spark or Python job, the feature data is read on-demand using a connector from the external store. On AWS, Hopsworks supports the creation of external feature groups from a large number of data stores, including Redshift, RDS, Snowflake, S3, and any JDBC-enabled source. \n",
     "\n",
-    "Registering external features with the Hopsworks feature store has several advantages. The first one is *provenance*, from the Hopsworks Web UI users are able to track which features are stored on which external systems and how they are computed. \n",
-    "Additionally HSFS (the Python/Scala library used to interact with the feature store) provides the same APIs for on-demand feature groups as for feature groups available within Hopsworks itself (Cached feature groups). Thus abstracting the complexity of configuring data ingestion.\n",
+    "In this example, we will define an external feature group for a table in Redshift. External feature groups in Hopsworks support “provenance” in the Hopsworks Web UI, you can track which features are stored on which external systems and how they are computed. Additionally HSFS (the Python/Scala library used to interact with the feature store) provides the same APIs for external feature groups as for cached feature groups.\n",
     "\n",
-    "An on-demand feature group can be defined as follow:"
+    "An external (on-demand) feature group can be defined as follow:"
    ]
   },
   {
@@ -194,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 style=\"color: #1EB382;font-weight: bold;\">Feature Engineering</h3>\n",
+    "<h3 style=\"color: #1EB382;font-weight: bold;\">Engineer features and save to the Feature Store</h3>\n",
     "\n",
     "On-demand feature groups can be used directly as a source for creating training datasets. This is often the case if a company is migrating to Hopsworks and there are already feature engineering pipelines in production writing data to Redshift.\n",
     "\n",
@@ -232,9 +230,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On-demand feature groups can also be joined with cached feature groups to create training datasets. This document (https://docs.hopsworks.ai/generated/query_vs_dataframe/) explains in details how the HSFS joining APIs work and how they can be used to create training datasets.\n",
+    "On-demand feature groups can also be joined with cached feature groups in Hopsworks to create training datasets. [This helper guide](https://docs.hopsworks.ai/generated/query_vs_dataframe/) explains in detail how the HSFS joining APIs work and how they can be used to create training datasets.\n",
     "\n",
-    "If, however, Redshift contains raw data that needs to be feature engineered, users can invoke the HSFS API and retrieve a Spark DataFrame backed by the Redshift table. "
+    "If, however, Redshift contains raw data that needs to be feature engineered, you can retrieve a Spark DataFrame backed by the Redshift table using the HSFS API."
    ]
   },
   {
@@ -349,14 +347,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 style=\"color: #1EB382;font-weight: bold;\">Derived Feature Group</h3>\n",
+    "Storing feature groups as cached feature groups within Hopsworks provides several benefits over on-demand feature groups. First it allows users to leverage Hudi for incremental ingestion (with ACID properties, ensuring the integrity of the feature group) and time travel capabilities. As new data is ingested, new commits are tracked by Hopsworks allowing users to see what has changed over time. On each commit, statistics are computed and tracked in Hopsworks, allowing users to understand how the data has changed over time.\n",
     "\n",
-    "Finally users can save the output of their transformations in the feature store as a derived cached feature group.\n",
-    "\n",
-    "Storing feature groups as cached feature groups within Hopsworks provides several benefits. First it allows users to leverage HUDI for upserts and time travel capabilities. As new data is ingested, new commits are tracked by Hopsworks allowing users to see what has changed over time.\n",
-    "Similarly to on-demand feature groups, at each commit, statistics are computed and tracked in Hopsworks, allowing users to understand how the data changes.\n",
-    "\n",
-    "Cached feature groups can also be made available online (`online_enabled=True`) thus enabling low latency requests to augment inference vectors."
+    "Cached feature groups can also be stored in the online feature store (`online_enabled=True`), thus enabling low latency access to the features using the online feature store API."
    ]
   },
   {
@@ -386,40 +379,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "An error was encountered:\n",
-      "java.io.IOException: Error: 400{\"type\":\"restApiJsonResponse\",\"errorCode\":270121,\"errorMsg\":\"Primary key and partition key are required when using Hudi time travel format\"}\n",
-      "  at com.logicalclocks.hsfs.metadata.AuthorizationHandler.handleResponse(AuthorizationHandler.java:45)\n",
-      "  at org.apache.http.impl.client.CloseableHttpClient.execute(CloseableHttpClient.java:223)\n",
-      "  at org.apache.http.impl.client.CloseableHttpClient.execute(CloseableHttpClient.java:191)\n",
-      "  at com.logicalclocks.hsfs.metadata.HopsworksInternalClient.handleRequest(HopsworksInternalClient.java:148)\n",
-      "  at com.logicalclocks.hsfs.metadata.HopsworksClient.handleRequest(HopsworksClient.java:151)\n",
-      "  at com.logicalclocks.hsfs.metadata.FeatureGroupApi.saveInternal(FeatureGroupApi.java:125)\n",
-      "  at com.logicalclocks.hsfs.metadata.FeatureGroupApi.save(FeatureGroupApi.java:105)\n",
-      "  at com.logicalclocks.hsfs.engine.FeatureGroupEngine.saveFeatureGroup(FeatureGroupEngine.java:90)\n",
-      "  at com.logicalclocks.hsfs.FeatureGroup.save(FeatureGroup.java:178)\n",
-      "  at com.logicalclocks.hsfs.FeatureGroup.save(FeatureGroup.java:173)\n",
-      "  ... 65 elided\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "telcoFg.save(telcoFgDf)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "telcoFg.save(telcoFgDf)"
+   ]
   }
  ],
  "metadata": {
