--- a/notebooks/featurestore/hsfs/snowflake/python.ipynb
+++ b/notebooks/featurestore/hsfs/snowflake/python.ipynb
@@ -24,7 +24,8 @@
    "outputs": [],
    "source": [
     "import hsfs\n",
-    "from pyspark.sql.types import *"
+    "import snowflake.connector\n",
+    "import pandas as pd"
    ]
   },
   {
