--- a/notebooks/ml/End_To_End_Pipeline/tensorflow/model_repo_and_serving.ipynb
+++ b/notebooks/ml/End_To_End_Pipeline/tensorflow/model_repo_and_serving.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
      "text": [
       "Finished Experiment \n",
       "\n",
-      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0176_4', {'accuracy': 0.59375, 'log': 'Experiments/application_1594231828166_0176_4/output.log'})"
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Experiments/application_1612897516680_0003_2', {'accuracy': 0.71875, 'log': 'Experiments/application_1612897516680_0003_2/output.log'})"
      ]
     }
    ],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
      "text": [
       "Model name: mnist\n",
       "Model version: 1\n",
-      "{'accuracy': '0.59375'}"
+      "{'loss': '0.2189614474773407', 'accuracy': '0.9399999976158142'}"
      ]
     }
    ],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -353,14 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'Stopped'"
+      "'Running'"
      ]
     }
    ],
@@ -392,18 +392,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting serving with name: mnist...\n",
-      "Serving with name: mnist successfully started"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if serving.get_status(MODEL_NAME) == 'Stopped':\n",
     "    serving.start(MODEL_NAME)"
@@ -411,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,44 +421,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "TOPIC_NAME = serving.get_kafka_topic(MODEL_NAME)\n",
-    "NUM_FEATURES=784"
+    "TOPIC_NAME = serving.get_kafka_topic(MODEL_NAME)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': [[0.00101464614, 0.124517113, 0.63427788, 0.0163144395, 0.0894692615, 0.00116351154, 0.060454987, 0.00864500459, 0.061855197, 0.0022879669]]}\n",
-      "{'predictions': [[0.00191850925, 0.167059571, 0.551065922, 0.0121973753, 0.101200588, 0.00293193664, 0.0549961925, 0.0213383641, 0.0848787874, 0.00241268263]]}\n",
-      "{'predictions': [[0.00050952629, 0.151139811, 0.556290507, 0.0104385419, 0.19585146, 0.000732801796, 0.0148065677, 0.028437674, 0.0396146365, 0.00217843778]]}\n",
-      "{'predictions': [[0.00132977683, 0.165724203, 0.596280158, 0.0154176438, 0.117487162, 0.000765851699, 0.0309293475, 0.0118588647, 0.0586582385, 0.00154881517]]}\n",
-      "{'predictions': [[0.0010584885, 0.126143798, 0.453216463, 0.0139270639, 0.23464562, 0.0021353832, 0.0354398228, 0.0268977303, 0.101747505, 0.00478807]]}\n",
-      "{'predictions': [[0.00129793282, 0.10362123, 0.4327223, 0.0191204343, 0.296470761, 0.00151372841, 0.0267837606, 0.00829808, 0.105536826, 0.00463500666]]}\n",
-      "{'predictions': [[0.000682579936, 0.114368267, 0.538814, 0.00784003, 0.199453488, 0.00151150499, 0.030661013, 0.0139077725, 0.08991687, 0.00284440466]]}\n",
-      "{'predictions': [[0.000656837947, 0.0822406784, 0.717460692, 0.00662791263, 0.0756253153, 0.000680917408, 0.0238178242, 0.00388909853, 0.0873425603, 0.00165810366]]}\n",
-      "{'predictions': [[0.000649773749, 0.178170785, 0.654825389, 0.00969067682, 0.0924373269, 0.000525904296, 0.0229914766, 0.00463350257, 0.0342777297, 0.00179741206]]}\n",
-      "{'predictions': [[0.000734140864, 0.0979306921, 0.637276947, 0.00539853284, 0.174462378, 0.000809073157, 0.0260299761, 0.0069808159, 0.0488583036, 0.00151915126]]}\n",
-      "{'predictions': [[0.00114852609, 0.0499146283, 0.756860316, 0.017711699, 0.0892188549, 0.00113097276, 0.01615295, 0.00969913, 0.0566330738, 0.00152997614]]}\n",
-      "{'predictions': [[0.00153077045, 0.122967966, 0.662966549, 0.0150937466, 0.0971821472, 0.00201104418, 0.0421369113, 0.0120321661, 0.0413411036, 0.00273760478]]}\n",
-      "{'predictions': [[0.00274692359, 0.0863644779, 0.526040792, 0.0319046862, 0.150395423, 0.00108450756, 0.0278904028, 0.0123740099, 0.158668086, 0.00253074407]]}\n",
-      "{'predictions': [[0.000831353187, 0.120074868, 0.552785456, 0.00987936463, 0.208313331, 0.00213050703, 0.0306558739, 0.0036379518, 0.0693310052, 0.00236020936]]}\n",
-      "{'predictions': [[0.00284365122, 0.219364971, 0.432664514, 0.020772, 0.200447902, 0.00315438746, 0.0391481072, 0.0192343, 0.0596243665, 0.00274573546]]}\n",
-      "{'predictions': [[0.00132579298, 0.100847624, 0.510532, 0.0210976154, 0.15261063, 0.00126931153, 0.0468352474, 0.00906759314, 0.153121889, 0.003292243]]}\n",
-      "{'predictions': [[0.000646409462, 0.083442688, 0.772507727, 0.00991513766, 0.0823320076, 0.000599695952, 0.0104787266, 0.0100289239, 0.0294341184, 0.000614514225]]}\n",
-      "{'predictions': [[0.000665465312, 0.0924700052, 0.792513669, 0.010322392, 0.0389793031, 0.000798372144, 0.0185041316, 0.00881760195, 0.0334593058, 0.00346980523]]}\n",
-      "{'predictions': [[0.000999733107, 0.117568776, 0.50835222, 0.00760547444, 0.192571685, 0.000939015415, 0.0373838656, 0.00708322553, 0.125456527, 0.00203944184]]}\n",
-      "{'predictions': [[0.000852248922, 0.123018786, 0.586152613, 0.00976038538, 0.181206152, 0.00210775784, 0.0333217718, 0.00450159563, 0.0558199398, 0.00325872377]]}"
+      "{'predictions': [[0.0779212415, 0.0206528381, 0.288687557, 0.121848293, 0.0503108464, 0.0873510465, 0.0276066549, 0.0781907663, 0.187041953, 0.0603887737]]}\n",
+      "{'predictions': [[0.0436310805, 0.0138141597, 0.57867527, 0.135367453, 0.0119447764, 0.0748140812, 0.0262800828, 0.0130807236, 0.0904700607, 0.0119222971]]}\n",
+      "{'predictions': [[0.14787294, 0.0144916158, 0.211063772, 0.0886604413, 0.0765435249, 0.109248385, 0.0546173975, 0.0572717749, 0.144594878, 0.0956352279]]}\n",
+      "{'predictions': [[0.0628308281, 0.0197642893, 0.166323707, 0.120164581, 0.110938296, 0.170455411, 0.0530575439, 0.039069593, 0.15719, 0.100205734]]}\n",
+      "{'predictions': [[0.0865588859, 0.0134802843, 0.200187, 0.169498667, 0.0459059887, 0.176918358, 0.0365497172, 0.0835796371, 0.138965875, 0.0483556092]]}\n",
+      "{'predictions': [[0.0743007287, 0.0101258708, 0.261402428, 0.151558295, 0.0459520668, 0.127735451, 0.0289862081, 0.0383619443, 0.206681922, 0.0548950806]]}\n",
+      "{'predictions': [[0.0573974513, 0.0199554805, 0.558617473, 0.0993415, 0.0227744412, 0.055287905, 0.0484865718, 0.0163362753, 0.0938799232, 0.0279229097]]}\n",
+      "{'predictions': [[0.136011392, 0.0193816, 0.23983492, 0.104724601, 0.0435764454, 0.137507305, 0.0530057438, 0.0424882658, 0.188378915, 0.0350908265]]}\n",
+      "{'predictions': [[0.0808366537, 0.0113092614, 0.196437895, 0.172132432, 0.0288104489, 0.20395799, 0.030593086, 0.0359038971, 0.199317485, 0.0407008566]]}\n",
+      "{'predictions': [[0.0712962598, 0.0114868265, 0.196357056, 0.123690538, 0.0602613166, 0.16008386, 0.0313527249, 0.0852302611, 0.19700855, 0.0632326]]}\n",
+      "{'predictions': [[0.112053499, 0.0147394678, 0.308953404, 0.10064631, 0.0105951196, 0.167411461, 0.0353867784, 0.0231331754, 0.207064912, 0.0200158209]]}\n",
+      "{'predictions': [[0.119645983, 0.0123673091, 0.137011141, 0.10019888, 0.0733054131, 0.136026412, 0.0469873697, 0.0548896119, 0.239629224, 0.0799387544]]}\n",
+      "{'predictions': [[0.110211149, 0.0151611241, 0.340642899, 0.124443188, 0.0493035726, 0.09111882, 0.0440291278, 0.0462933369, 0.122960515, 0.0558362901]]}\n",
+      "{'predictions': [[0.0952871442, 0.0246779732, 0.190254971, 0.150301486, 0.0448088124, 0.186811075, 0.0349477455, 0.0800457075, 0.146037623, 0.046827469]]}\n",
+      "{'predictions': [[0.0853213891, 0.0198458154, 0.205136046, 0.138573796, 0.0435453393, 0.22410652, 0.0379152261, 0.0488636941, 0.143376201, 0.0533159822]]}\n",
+      "{'predictions': [[0.100863017, 0.0103625813, 0.369757593, 0.167217165, 0.0243374724, 0.12725547, 0.0223250668, 0.0423610508, 0.105823614, 0.0296969116]]}\n",
+      "{'predictions': [[0.0927432254, 0.0068268911, 0.166491747, 0.0584302619, 0.0927049592, 0.243103638, 0.069480285, 0.0320171155, 0.162074924, 0.0761269629]]}\n",
+      "{'predictions': [[0.0440622643, 0.0147205563, 0.317738354, 0.170422316, 0.0237440355, 0.148835912, 0.0301028509, 0.0189738106, 0.193881959, 0.0375178754]]}\n",
+      "{'predictions': [[0.0493963882, 0.0283130165, 0.288004, 0.189685568, 0.0558851101, 0.111049548, 0.0214466415, 0.0489067659, 0.145695582, 0.0616173148]]}\n",
+      "{'predictions': [[0.151540339, 0.0123999268, 0.337026715, 0.126781777, 0.0202505738, 0.0851887465, 0.0370752886, 0.0556211509, 0.141307309, 0.0328081362]]}"
      ]
     }
    ],
@@ -475,7 +465,7 @@
     "import json\n",
     "for i in range(20):\n",
     "    data = {\n",
-    "                \"signature_name\": \"serving_default\", \"instances\": [np.random.rand(NUM_FEATURES).tolist()]\n",
+    "                \"signature_name\": \"serving_default\", \"instances\": [np.random.rand(28,28,1).tolist()]\n",
     "            }\n",
     "    response = serving.make_inference_request(MODEL_NAME, data)\n",
     "    print(response)"
