--- a/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
+++ b/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
@@ -43,7 +43,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>6</td><td>application_1604957327609_0010</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1604957327609_0010/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1604957327609_0010_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>1</td><td>application_1612782748969_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1612782748969_0003/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1612782748969_0003_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -338,83 +338,6 @@
     "                               version=6)\n",
     "\n",
     "td.save(df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Add a tag to a training dataset\n",
-    "\n",
-    "As for feature groups, you can add tags to a training dataset. Tags are indexed and you can search for them in the Hopsworks feature store UI. Tags are an useful tool to catalog the feature store. The `value` field can be omitted. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Tagging Training Datasets\n",
-    "The feature store enables users to attach tags to training dataset in order to make them discoverable across feature\n",
-    "stores.  A tag is a simple {key: value} association, providing additional information about the data, such as for\n",
-    "example geographic origin. This is useful in an organization as it makes easier to discover for data scientists, reduces\n",
-    "duplicated work in terms of for example data preparation. The tagging feature is only available in the enterprise version."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Define tags that can be attached\n",
-    "The first step is to define a set of tags that can be attached. Such as for example “Country” to tag data as being from\n",
-    "a certain geographic location and “Sport” to further associate a type of Sport with the data.\n",
-    "\n",
-    "![Define tags that can be attached](../images/creating_tags.gif)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Attach tags using the UI\n",
-    "Tags can then be attached using the feature store UI or programmatically using the API.\n",
-    "Attaching tags to feature group.\n",
-    "\n",
-    "![Attach tags using the UI](../images/attach_tags.gif)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "td = fs.get_training_dataset(\"sales_model\", 5)\n",
-    "td.add_tag(\"model\", value=\"sales\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "From the HSFS API you can also list all the tags associated with a specific training dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'model': 'sales'}]"
-     ]
-    }
-   ],
-   "source": [
-    "td = fs.get_training_dataset(\"sales_model\", 5)\n",
-    "td.get_tag()"
    ]
   },
   {
