--- a/notebooks/featurestore/azure/azure-ml-studio.ipynb
+++ b/notebooks/featurestore/azure/azure-ml-studio.ipynb
@@ -79,7 +79,7 @@
         "connection = hsfs.connection(host=\"[UUID].cloud.hopsworks.ai\",\n",
         "    project=\"[project-name]\",\n",
         "    engine=\"hive\",\n",
-        "    api_key_value=\"[project-name]\")\n",
+        "    api_key_value=\"[api-key]\")\n",
         "\n",
         "fs = connection.get_feature_store()"
       ],
