Add tags to all notebooks for hugo

--- a/notebooks/featurestore/snowflake/pythonChurnCreateFeaturegroups.ipynb
+++ b/notebooks/featurestore/snowflake/pythonChurnCreateFeaturegroups.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Snowflake Ingestion (2) Create Feature groups in Python\"\n",
+    "date: 2021-02-24\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -371,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
   },
   "pycharm": {
    "stem_cell": {
