--- a/notebooks/featurestore/datasets/TitanicTrainingDatasetPython.ipynb
+++ b/notebooks/featurestore/datasets/TitanicTrainingDatasetPython.ipynb
@@ -8,6 +8,18 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Dataset Titanic on the Feature Store\"\n",
+    "date: 2021-02-24\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
