fix image paths

--- a/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "A feature is not restricted to an numeric value, it could be a string representing an address, or an image.\n",
     "\n",
-    "![Feature Store Overview](../../images/overview.svg \"Feature Store Overview\")\n",
+    "![Feature Store Overview](../images/overview.svg \"Feature Store Overview\")\n",
     "\n",
     "A feature store is not a pure storage service, it goes hand-in-hand with feature computation. Feature engineering is the process of transforming raw data into a format that is compatible and understandable for predictive models.\n",
     "\n",
