--- a/notebooks/featurestore/hsfs/basics/feature_exploration.ipynb
+++ b/notebooks/featurestore/hsfs/basics/feature_exploration.ipynb
@@ -23,7 +23,7 @@
     "A key component of the Hopsworks feature store is to enable sharing and re-using of features across models and use cases. As such, the HSFS libraries allows user to join features from different feature groups and use them to create training datasets.\n",
     "Features can be taken also from different feature stores (projects) as long as the user running the notebook has the read access to those.\n",
     "\n",
-    "![Join](../../images/join.svg \"Join\")\n",
+    "![Join](../images/join.svg \"Join\")\n",
     "\n",
     "As for the [feature_engineering](./feature_engineering.ipynb) notebook, the first step is to establish a connection with the feature store and retrieve the project feature store handle."
    ]
