--- a/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
+++ b/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
@@ -368,7 +368,7 @@
     "The first step is to define a set of tags that can be attached. Such as for example “Country” to tag data as being from\n",
     "a certain geographic location and “Sport” to further associate a type of Sport with the data.\n",
     "\n",
-    "![Define tags that can be attached](../../images/creating_tags.gif)"
+    "![Define tags that can be attached](../images/creating_tags.gif)"
    ]
   },
   {
@@ -379,7 +379,7 @@
     "Tags can then be attached using the feature store UI or programmatically using the API.\n",
     "Attaching tags to feature group.\n",
     "\n",
-    "![Attach tags using the UI](../../images/attach_tags.gif)"
+    "![Attach tags using the UI](../images/attach_tags.gif)"
    ]
   },
   {
