--- a/notebooks/featurestore/aws/redshift/Redshift_pyspark.ipynb
+++ b/notebooks/featurestore/aws/redshift/Redshift_pyspark.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "This notebooks guides through the ingestion of Redshift data in the Hopsworks feature store. To follow this notebook users should have an existing Redshift cluster, if not, they can follow the AWS [documentation](https://docs.aws.amazon.com/ses/latest/DeveloperGuide/event-publishing-redshift-cluster.html).\n",
     "\n",
-    "The data for this tutorial is available in CSV format [here]()\n",
+    "The data for this tutorial is available in CSV format [here](../data/Sacramentorealestatetransactions.csv)\n",
     "Users should create the following table in Redshift\n",
     "```sql\n",
     "CREATE TABLE telco(\n",
@@ -64,7 +64,7 @@
     "The first step to be able to ingest Redshift data into the feature store is to configure a storage connector.The Redshift connector requires you to specify the following properties. Most of them are available in the properties area of your cluster in the Redshift UI.\n",
     "\n",
     "\n",
-    "<img src=\"images/connector_ui.png\" alt=\"Redshift Connector UI\" style=\"margin: auto; height: 600px; width:550px;\"/>\n",
+    "<img src='images/connector_ui.png' alt=\"Redshift Connector UI\" style=\"margin: auto; height: 600px; width:550px;\"/>\n",
     "\n",
     "- Cluster identifier: The name of the cluster\n",
     "\n",
