--- a/notebooks/featurestore/aws/redshift/Redshift_spark.ipynb
+++ b/notebooks/featurestore/aws/redshift/Redshift_spark.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Feature Ingestion from Redshift\"\n",
+    "title: \"Feature Ingestion from Redshift with Spark\"\n",
     "date: 2021-02-24\n",
     "type: technical_note\n",
     "draft: false\n",
