--- a/notebooks/featurestore/hsfs/data_validation/feature_validation_scala.ipynb
+++ b/notebooks/featurestore/hsfs/data_validation/feature_validation_scala.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Hsfs - Data Validation with Scala\"\n",
+    "title: \"Data Validation with Scala\"\n",
     "date: 2021-02-24\n",
     "type: technical_note\n",
     "draft: false\n",
